# echo_vector

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  demo.py  pyproject.toml
.claude/: settings.json
.claude/commands/: release.md
.github/workflows/: workflow.yml
demo_index/: metadata.sqlite
echovector/: __init__.py  core.py
echovector/api/: __init__.py  server.py
echovector/audio/: __init__.py  chunker.py  metadata.py  processor.py  streaming.py
echovector/cli/: __init__.py  main.py
echovector/embeddings/: __init__.py  ast_model.py  base.py  cache.py  clap.py  factory.py  hubert.py  local.py  wav2vec2.py  whisper_enc.py
echovector/evaluation/: metrics.py
echovector/indexing/: __init__.py  base.py  faiss_index.py  store.py
echovector/search/: __init__.py  engine.py  filters.py  results.py
echovector/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/fixtures/: __init__.py  audio_generators.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_audio_processor.py  test_chunker.py  test_core.py  test_embeddings.py  test_faiss_index.py  test_local_backend.py  test_results.py  test_search_engine.py  test_utils.py
