[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "echo_vector"
dynamic = ["version"]
description = "Semantic text search over audio files without full transcription"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "EchoVector Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
keywords = ["audio", "search", "embeddings", "semantic", "vector", "FAISS", "CLAP"]
dependencies = [
    "numpy>=1.26,<3",
    "pydantic>=2.5,<3",
    "soundfile>=0.12,<1",
    "librosa>=0.10,<1",
    "faiss-cpu>=1.7,<2",
    "typer[all]>=0.12,<1",
    "rich>=13.7,<14",
    "pydub>=0.25,<1",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
clap = [
    "torch>=2.1,<3",
    "transformers>=4.36,<5",
]
api = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "pytest-xdist>=3.5,<4",
    "httpx2>=2.0,<3",
    "hypothesis>=6.92,<7",
    "mutmut>=2.4,<3",
    "ruff>=0.15,<1",
    "mypy>=1.8,<2",
    "pre-commit>=3.6,<4",
]
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.24,<1",
    "mkdocs-gen-files>=0.5,<1",
    "mkdocs-literate-nav>=0.6,<1",
]
all = ["echo_vector[clap,api,dev,docs]"]

[project.scripts]
echovector = "echovector.cli.main:app"

[project.urls]
Homepage = "https://github.com/ahron-maslin/echo_vector"
Documentation = "https://github.com/ahron-maslin/echo_vector#readme"
Repository = "https://github.com/ahron-maslin/echo_vector"
Issues = "https://github.com/ahron-maslin/echo_vector/issues"
Changelog = "https://github.com/ahron-maslin/echo_vector/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["echovector"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "SIM",          # flake8-simplify
    "TCH",          # flake8-type-checking
    "RUF",          # Ruff-specific
    "D",            # pydocstyle
    "ANN",          # flake8-annotations
    "S",            # flake8-bandit
    "C4",           # flake8-comprehensions
    "PT",           # flake8-pytest-style
    "RET",          # flake8-return
    "ARG",          # flake8-unused-arguments
]
ignore = [
    "D100", "D104", "D107",  # missing docstrings in some places
    "ANN401",                 # Any is intentional in **kwargs and config helpers
    "S101",                   # assert usage (fine in tests)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "S101", "ARG", "E501", "PT011"]
"echovector/api/server.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "faiss",
    "librosa",
    "librosa.*",
    "soundfile",
    "pydub",
    "pydub.*",
    "transformers",
    "transformers.*",
    "torch",
    "torch.*",
    "torchaudio",
    "torchaudio.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["echovector.api.server"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-x",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
    "performance: marks performance/benchmark tests",
    "gpu: marks tests that require GPU",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:numba",
    "ignore::UserWarning:librosa",
    "ignore:.*httpx.*:DeprecationWarning:starlette.*",
    "ignore:.*app.*shortcut.*:DeprecationWarning:httpx.*",
]

[tool.coverage.run]
source = ["echovector"]
branch = true
omit = [
    "echovector/benchmarks/*",
    "echovector/api/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.mutmut]
paths_to_mutate = "echovector/"
tests_dir = "tests/"
